# inventory_management_system

./: .dockerignore  .gitignore  Dockerfile  Makefile  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1ccf3357870a_initial_catalog_tables.py  3ff58925a231_update.py  9ba43f0d0011_add_inventory_ledger_and_soft_.py  f0744ee01ad1_update_created_updated_timezone_handling.py
src/: main.py
src/core/: config.py  database.py  errors.py  idempotency.py  models.py
src/core/security/: context.py  middleware.py
src/domains/catalog/: models.py  router.py
src/domains/catalog/services/: discovery.py  ingestion.py
src/domains/inventory/: exceptions.py  models.py  router.py  schemas.py  service.py
src/rust_engine/: Cargo.toml  pyproject.toml
src/rust_engine/src/: lib.rs
src/shared/templates/: base.html
tests/: conftest.py
tests/domains/catalog/: test_discovery.py  test_ingestion.py
tests/domains/inventory/: test_engine.py
